--- a/src/config.json
+++ b/src/config.json
@@ -1,15 +1,15 @@
 {
     "I2C_ADDRESS": "0x70",
-    "I2C_SDA": 6,
-    "I2C_SCL": 7,
+    "I2C_SDA": 4,
+    "I2C_SCL": 5,
     "I2C_BUS": 0,
-    "SPI_PORT": 1,
-    "SPI_CS": 2,
-    "SPI_MOSI": 21,
-    "SPI_SCK": 20,
+    "SPI_PORT": 0,
+    "SPI_CS": 17,
+    "SPI_MOSI": 19,
+    "SPI_SCK": 18,
     "WS2812B_PIN": 2,
-    "ENABLE_MAX7219": true,
-    "ENABLE_HT16K33": true,
+    "ENABLE_MAX7219": false,
+    "ENABLE_HT16K33": false,
     "ENABLE_WS2812B": true
   }
   
