--- a/src/config_pico_w.json
+++ b/src/config_pico_w.json
@@ -7,8 +7,8 @@
   "SPI_CS": 17,
   "SPI_MOSI": 19,
   "SPI_SCK": 18,
-  "WS2812B_PIN": 0,
-  "ENABLE_MAX7219": true,
-  "ENABLE_HT16K33": true,
+  "WS2812B_PIN": 2,
+  "ENABLE_MAX7219": false,
+  "ENABLE_HT16K33": false,
   "ENABLE_WS2812B": true
 }
